AttLogicaServicesALL